Recharge and Withdraw Money

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,15 @@
             android:name=".activity_user_profile"
             android:exported="false" />
         <activity
+            android:name=".RechargeDetailActivity"
+            android:exported="true"/>
+        <activity
+            android:name=".RechargeWithdraw"
+            android:exported="true"/>
+        <activity
+            android:name=".WithdrawDetailActivity"
+            android:exported="true"/>
+        <activity
             android:name=".Home"
             android:exported="true">
             <intent-filter>
