fix bug: - add ServiceDetailActivity in AndroidManifest.xml - fix wrong layout id in ServiceAdapter - using constructor in ServiceAdapter instead of setData() method - add missing Account.class in RechargeHistoryDatabase - add back button back to home view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
             android:name=".WithdrawDetailActivity"
             android:exported="true"/>
         <activity
+            android:name=".ServiceDetailActivity"
+            android:exported="true"/>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
