--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".dataLocal.MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -13,6 +14,12 @@
         android:theme="@style/Theme.PRM392_TEAM1_SpaApp"
         tools:targetApi="31">
         <activity
+            android:name=".ServiceDetailActivity"
+            android:exported="true" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true" />
+        <activity
             android:name=".Banking"
             android:exported="false" />
         <activity
@@ -20,15 +27,15 @@
             android:exported="false" />
         <activity
             android:name=".RechargeDetailActivity"
-            android:exported="true"/>
+            android:exported="false"/>
         <activity
             android:name=".RechargeWithdraw"
-            android:exported="true"/>
+            android:exported="false"/>
         <activity
             android:name=".WithdrawDetailActivity"
-            android:exported="true"/>
+            android:exported="false"/>
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
