--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,10 @@
             android:name=".MainActivity"
             android:exported="true" />
         <activity
-            android:name=".Banking"
+            android:name=".BankActivity"
             android:exported="false" />
         <activity
-            android:name=".activity_user_profile"
+            android:name=".UserProfileActivity"
             android:exported="false" />
         <activity
             android:name=".RechargeDetailActivity"
