--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <application
         android:name=".dataLocal.MyApplication"
         android:allowBackup="true"
@@ -13,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PRM392_TEAM1_SpaApp"
         tools:targetApi="31">
+        <activity
+            android:name=".RegisterActivities"
+            android:exported="false" />
         <activity
             android:name=".ServiceDetailActivity"
             android:exported="true" />
@@ -27,18 +32,19 @@
             android:exported="false" />
         <activity
             android:name=".RechargeDetailActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".RechargeWithdraw"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".WithdrawDetailActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
